--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/stack": "^6.3.5",
+    "axios": "^1.2.0",
     "expo": "~47.0.8",
+    "expo-constants": "~14.0.2",
+    "expo-file-system": "~15.1.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
     "react-native-gesture-handler": "~2.8.0",
-    "expo-constants": "~14.0.2",
-    "expo-file-system": "~15.1.1"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
